I was having issues with the previous navigation so I changed it again. Also fixed a few layout bugs. The hero container was overlapping the nav after I set the nav to fixed.

--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -1,50 +1,34 @@
-/*Backgrounds---------------------------------------------------------------------------------- */
+/*Navigation---------------------------------------------------------------------------------- */
+
+.navbar{
+    width:100%;
+    z-index: 1;
+    height: 120px;
+}
+
+.navbar li a {
+    color: black;
+    text-align: center;
+    line-height: 5px;
+}
+
+.logo {
+    width: 80px; 
+    height: 80px;
+    float: left;
+    background-color: black;
+    text-align: center;
+    left:0;
+}
+
+/*colours---------------------------------------------------------------------------------- */
 body {
     background-color: lightgray;
 }
 
-/*Navigation---------------------------------------------------------------------------------- */
-nav {
-    position:fixed;
-    top:0;
-    margin:0;
-    margin-bottom: 20px;
-    z-index: 1;
-    width:100%; 
-    height:50px;
-    float: right;
+.navbar {
+    background-color: grey;
 }
-
-nav ul li {
-    padding: 20px 15px;
-    font-weight: bold;
-    font-size: 15px;
-    height:70px;
-    text-align: center;
-    width:20%;
-    font-style: none;
-}
-
-.nav {
-    
-}
-
-.home-nav {
-    background-color: aqua;
-}
-
-.about-nav {
-    background-color: aquamarine;
-}
-
-.gallery-nav {
-    background-color: beige;
-}
-
-.contact-nav {
-    background-color: blue;
-}
-
 /*Headings---------------------------------------------------------------------------------- */
 
 .heading-one {
@@ -59,7 +43,6 @@ nav ul li {
 .contact-information {
     text-align: center;
     font-size: small;
-    margin: auto;
     height:100%;
 }
 
@@ -79,17 +62,8 @@ nav ul li {
     background-repeat: no-repeat;
     width:100%;
     height: 600px;
-    margin:0;
-    margin-top: 15px;
-}
-
-.logo {
-    width: 50px; 
-    height: 50px;
-    top: 0;
-    right: 0;
-    padding-right:50px; 
-
+    z-index: 2;
+    margin-top:100px
 }
 
 /*About ---------------------------------------------------------------------------------- */
@@ -98,15 +72,6 @@ nav ul li {
     height: 300px;
     width:100%; 
     text-align: center;
-    bottom: 0;
-    margin:auto;
-}
-
-/*Footer---------------------------------------------------------------------------------- */
-
-footer {
-    width: 100%;
-    margin: 0;
     bottom: 0;
 }
 
